--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   </nav>
   <section class="top">
     <div class="top-img">
-      <img src="assets/header_img.jpg" alt="sunrise over the mountains in Yosemite">
+      <img class="promo" src="assets/header_img.jpg" alt="sunrise over the mountains in Yosemite">
     </div> 
     <div class= "info">
       <h1>Yosemite Park Guide</h1>
       <p>Come explore California’s beautiful wilderness.<br>
-      Always open. Reservations are not available or required to enter the park.</p>
+      Always open. Reservations are not available or required to enter the <br>park.</p>
     </div>
   </section>
  <section class="overview">
@@ -29,13 +29,14 @@
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
     </div>
  </section>
-    <div>
-      "https://image.flaticon.com/icons/svg/2979/2979348.svg"
-      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
-    </div>  
-      "https://image.flaticon.com/icons/svg/820/820374.svg"
-      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
-    
+    <div class= "warning">
+      <img src="assets/campfire.png" alt="a little campfire">
+      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span>current fire restrictions.</span></p>
+    </div>
+    <div class=reservations>  
+      <img src="assets/RV.png"alt=" a wee RV">
+      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span>park entrance fee</span> upon arrival (there's no need to pay it in advance).</p>
+    </div> 
       <div class="image-container">
 
       </div>
